Retire HyperbandSearch experiment

--- a/Train-Again.ipynb
+++ b/Train-Again.ipynb
@@ -151,30 +151,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import KFold\n",
-    "from sklearn.pipeline import Pipeline as PipelineBase\n",
-    "from lib.failable import ElementFunctionTransformer, DropErrors\n",
-    "\n",
-    "# from dask_ml.model_selection import HyperbandSearchCV\n",
-    "# from dask_ml.wrappers import Incremental\n",
-    "\n",
-    "from sklearn.model_selection import RandomizedSearchCV\n",
-    "\n",
-    "\n",
-    "class Pipeline(PipelineBase):\n",
-    "    def partial_fit(self, X, y=None):\n",
-    "        args = [X, y]\n",
-    "        for name, est in self.steps:\n",
-    "            if est is None:\n",
-    "                continue\n",
-    "            est.partial_fit(*args)\n",
-    "            X_transformed = est.transform(args[0])\n",
-    "            args = [X_transformed, y]\n",
-    "        return self\n",
+    "from sklearn.model_selection import KFold, RandomizedSearchCV\n",
     "\n",
     "\n",
     "def make_parameter_search(model, cv_params):\n",
-    "    # if all([])\n",
     "    return RandomizedSearchCV(\n",
     "        model,\n",
     "        cv_params,\n",
@@ -185,12 +165,6 @@
     "        error_score=\"raise\",\n",
     "        n_jobs=-1,\n",
     "    )\n",
-    "    # return HyperbandSearchCV(\n",
-    "    #     Incremental(model, random_state=rng()),\n",
-    "    #     {f\"estimator__{key}\": value for key, value in cv_params.items()},\n",
-    "    #     scoring=\"balanced_accuracy\",\n",
-    "    #     random_state=seed,\n",
-    "    # )"
    ]
   },
   {
@@ -247,7 +221,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from sklearn.pipeline import Pipeline"
+    "from sklearn.pipeline import Pipeline"
    ]
   },
   {
