Better distribute loading data to cluster

--- a/Train-Again.ipynb
+++ b/Train-Again.ipynb
@@ -131,22 +131,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd2ef493-35eb-488f-bc6b-9f375963a2e9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def rdkit_ecfp(mol):\n",
-    "    from rdkit.Chem.rdFingerprintGenerator import GetMorganGenerator\n",
-    "    import numpy as np\n",
-    "\n",
-    "    gen = GetMorganGenerator(radius=2, fpSize=1024)\n",
-    "    fp = gen.GetFingerprint(mol)\n",
-    "    return np.int64(fp)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "48d0b9ef-8bd8-419a-b07c-a9de9f934d54",
    "metadata": {},
    "outputs": [],
@@ -165,6 +149,10 @@
     "        error_score=\"raise\",\n",
     "        n_jobs=-1,\n",
     "    )\n",
+    "\n",
+    "\n",
+    "def parameter_search_name(ps):\n",
+    "    return ps.estimator.steps[-1][0]"
    ]
   },
   {
@@ -460,6 +448,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from lib.failable import ElementFunctionTransformer, DropErrors\n",
+    "\n",
+    "\n",
+    "def rdkit_ecfp(mol):\n",
+    "    from rdkit.Chem.rdFingerprintGenerator import GetMorganGenerator\n",
+    "    import numpy as np\n",
+    "\n",
+    "    gen = GetMorganGenerator(radius=2, fpSize=1024)\n",
+    "    fp = gen.GetFingerprint(mol)\n",
+    "    return np.int64(fp)\n",
+    "\n",
+    "\n",
     "standardizer = Standardizer()\n",
     "\n",
     "\n",
@@ -484,7 +484,7 @@
     "        ]\n",
     "    ).transform(data.ROMol)\n",
     "\n",
-    "    return data"
+    "    return np.stack(data.Descriptors), np.stack(data.Classification.astype(int))"
    ]
   },
   {
@@ -494,20 +494,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_model(model, target):\n",
-    "    data = load_data(target)\n",
-    "    descs = np.stack(data.Descriptors)\n",
-    "    #\n",
-    "    with Client(cluster) as client:\n",
-    "        with joblib.parallel_backend(\"loky\", njobs=-1):\n",
-    "            # Train\n",
-    "            model.fit(descs, data.Classification.astype(int))\n",
-    "    #\n",
-    "    ## Cross validate\n",
-    "    # cross = cross_validation(model, descs, data.Classification.astype(int))\n",
+    "import joblib\n",
     "\n",
-    "    model = None\n",
-    "    cross = None\n",
+    "\n",
+    "def train_model(model, data):\n",
+    "    # Destructure training data\n",
+    "    X, y = data\n",
+    "\n",
+    "    # with Client(cluster) as client:\n",
+    "    # with joblib.parallel_backend(\"loky\", njobs=-1):\n",
+    "    # Train\n",
+    "    model.fit(X, y)\n",
+    "\n",
+    "    # Cross validate\n",
+    "    cross = cross_validation(model, X, y)\n",
     "\n",
     "    return model, cross"
    ]
@@ -587,31 +587,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90ca7621-0967-4458-971c-2dcf5dfdfaed",
+   "id": "7f325925-50e5-4350-b538-1fb4e21d6352",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = load_data(\"BCRP\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bd27df6c-9d92-4714-9f46-5331be3ca554",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.stack(data.Classification)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "15b2810c-2810-446c-8c54-2142f5499d58",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "models[1].fit(np.stack(data.Descriptors), np.stack(data.Classification.astype(int)))"
+    "data = [(name, client.submit(load_data, name, key=f\"load-{name}\")) for name in targets]"
    ]
   },
   {
@@ -625,12 +605,12 @@
     "    client.submit(\n",
     "        train_model,\n",
     "        model,\n",
-    "        target,\n",
-    "        key=f\"train-{model.estimator.steps[-1][0]}-{target}-1\",\n",
+    "        target_data,\n",
+    "        key=f\"train-{parameter_search_name(model)}-{target_name}\",\n",
     "        # resources={\"singleton\": 1},\n",
     "    )\n",
     "    for model in models\n",
-    "    for target in targets\n",
+    "    for (target_name, target_data) in data\n",
     "]"
    ]
   },
