Simplify data processing and parallelize more stuff over dask

--- a/Train-Again.ipynb
+++ b/Train-Again.ipynb
@@ -404,9 +404,42 @@
    "outputs": [],
    "source": [
     "from rdkit.Chem.PandasTools import LoadSDF\n",
-    "from dask.distributed import worker_client\n",
+    "import dask.bag as db\n",
     "import numpy as np\n",
-    "from molvs import Standardizer, MolVSError"
+    "from molvs import Standardizer, MolVSError\n",
+    "import joblib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fffad207-64fb-44b2-9271-7349c8cd2ecf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rdkit_ecfp(mol):\n",
+    "    from rdkit.Chem.rdFingerprintGenerator import GetMorganGenerator\n",
+    "    import numpy as np\n",
+    "\n",
+    "    gen = GetMorganGenerator(radius=2, fpSize=1024)\n",
+    "    fp = gen.GetFingerprint(mol)\n",
+    "    return np.int64(fp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c1a2031-5381-448d-8beb-6366efc665dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "standardizer = Standardizer()\n",
+    "\n",
+    "def standardize(mol):\n",
+    "    try:\n",
+    "        return standardizer.super_parent(mol)\n",
+    "    except MolVSError:\n",
+    "        return None"
    ]
   },
   {
@@ -416,43 +449,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from lib.failable import ElementFunctionTransformer, DropErrors\n",
-    "\n",
-    "\n",
-    "def rdkit_ecfp(mol):\n",
-    "    from rdkit.Chem.rdFingerprintGenerator import GetMorganGenerator\n",
-    "    import numpy as np\n",
-    "\n",
-    "    gen = GetMorganGenerator(radius=2, fpSize=1024)\n",
-    "    fp = gen.GetFingerprint(mol)\n",
-    "    return np.int64(fp)\n",
-    "\n",
-    "\n",
-    "standardizer = Standardizer()\n",
-    "\n",
-    "\n",
     "def load_data(target):\n",
     "    data = LoadSDF(\n",
     "        f\"ba_assets/data_for_models/data_threshold_all_filled_0.5_all_masters/training_chembl+manual/{target}.sdf\"\n",
     "    )\n",
     "\n",
-    "    data[\"Descriptors\"] = Pipeline(\n",
-    "        [\n",
-    "            (\n",
-    "                \"standardize\",\n",
-    "                ElementFunctionTransformer(\n",
-    "                    standardizer.standardize, catch_exception=MolVSError\n",
-    "                ),\n",
-    "            ),\n",
-    "            (\"drop_errors\", DropErrors()),\n",
-    "            (\n",
-    "                \"extract_features\",\n",
-    "                ElementFunctionTransformer(rdkit_ecfp),\n",
-    "            ),\n",
-    "        ]\n",
-    "    ).transform(data.ROMol)\n",
+    "    # Dask dataframe should be the better choice, but it seems to have some problems\n",
+    "    # with converting object types to string.\n",
+    "    data = data.assign(\n",
+    "        ROMol=db.from_sequence(data.ROMol, partition_size=1).map(standardize).compute()\n",
+    "    )\n",
+    "    data = data.assign(Classification=data.Classification.astype(int))\n",
+    "    data = data.dropna(subset=[\"ROMol\"])\n",
     "\n",
-    "    return np.stack(data.Descriptors), np.stack(data.Classification.astype(int))"
+    "    data = data.assign(Descriptors=data.ROMol.map(rdkit_ecfp))\n",
+    "\n",
+    "    return np.stack(data.Descriptors), np.stack(data.Classification)"
    ]
   },
   {
@@ -467,7 +479,8 @@
     "    X, y = data\n",
     "\n",
     "    # Train\n",
-    "    model.fit(X, y)\n",
+    "    with joblib.parallel_backend(\"dask\", n_jobs=-1):\n",
+    "        model.fit(X, y)\n",
     "\n",
     "    # Cross validate\n",
     "    cross = cross_validation(model, X, y)\n",
