Remove keying of jobs

--- a/Train-Again.ipynb
+++ b/Train-Again.ipynb
@@ -567,7 +567,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = [(name, client.submit(load_data, name, key=f\"load-{name}\")) for name in targets]"
+    "data = [(name, client.submit(load_data, name)) for name in targets]"
    ]
   },
   {
@@ -582,7 +582,6 @@
     "        train_model,\n",
     "        model,\n",
     "        target_data,\n",
-    "        key=f\"train-{parameter_search_name(model)}-{target_name}\",\n",
     "        # resources={\"singleton\": 1},\n",
     "    )\n",
     "    for model in models\n",
