--- a/Train-Again.ipynb
+++ b/Train-Again.ipynb
@@ -480,7 +480,7 @@
     "    X, y = data\n",
     "\n",
     "    # Train\n",
-    "    with joblib.parallel_backend(\"dask\", n_jobs=-1):\n",
+    "    with joblib.parallel_config(\"dask\", n_jobs=-1):\n",
     "        model.fit(X, y)\n",
     "\n",
     "    # Cross validate\n",
