Use dictionaries for storing different models

--- a/Train-Again.ipynb
+++ b/Train-Again.ipynb
@@ -568,7 +568,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = [(name, client.submit(load_data, name)) for name in targets]"
+    "data = {name: client.submit(load_data, name) for name in targets}"
    ]
   },
   {
@@ -578,16 +578,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "jobs = [\n",
-    "    client.submit(\n",
+    "jobs = {\n",
+    "    f\"{target_name}-{parameter_search_name(model)}\": client.submit(\n",
     "        train_model,\n",
     "        model,\n",
     "        target_data,\n",
     "        # resources={\"singleton\": 1},\n",
     "    )\n",
     "    for model in models\n",
-    "    for (target_name, target_data) in data\n",
-    "]"
+    "    for (target_name, target_data) in data.items()\n",
+    "}"
    ]
   },
   {
@@ -597,7 +597,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = [job.result() for job in jobs]"
+    "results = [job.result() for _, job in jobs.items() if job.done()]"
    ]
   }
  ],
