Make rmtree idempotent

--- a/Train-Again.ipynb
+++ b/Train-Again.ipynb
@@ -519,7 +519,7 @@
    "source": [
     "if \"cluster\" in globals():\n",
     "    cluster.close()\n",
-    "shutil.rmtree(\"logs\")\n",
+    "shutil.rmtree(\"logs\", ignore_errors=True)\n",
     "\n",
     "cluster = SLURMCluster(\n",
     "    cores=1,\n",
