Bind scheduler to all ports

--- a/Train-Again.ipynb
+++ b/Train-Again.ipynb
@@ -525,7 +525,7 @@
     "    cores=1,\n",
     "    job_cpu=16,\n",
     "    memory=\"128 GB\",\n",
-    "    scheduler_options={\"dashboard_address\": \":8787\"},\n",
+    "    scheduler_options={\"host\": \"0.0.0.0\", \"dashboard_address\": \":8787\"},\n",
     "    log_directory=\"logs\",\n",
     "    # worker_extra_args=[\"--resources\", \"singleton=1\"],\n",
     ")\n",
