Use ECFP4 descriptors from CDK

--- a/Train-Again.ipynb
+++ b/Train-Again.ipynb
@@ -407,23 +407,8 @@
     "import dask.bag as db\n",
     "import numpy as np\n",
     "from molvs import Standardizer, MolVSError\n",
+    "from lib.descriptors.cdk import ECFPCalc, ECFPID\n",
     "import joblib"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fffad207-64fb-44b2-9271-7349c8cd2ecf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def rdkit_ecfp(mol):\n",
-    "    from rdkit.Chem.rdFingerprintGenerator import GetMorganGenerator\n",
-    "    import numpy as np\n",
-    "\n",
-    "    gen = GetMorganGenerator(radius=2, fpSize=1024)\n",
-    "    fp = gen.GetFingerprint(mol)\n",
-    "    return np.int64(fp)"
    ]
   },
   {
@@ -446,6 +431,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c7d7efdc-f0c2-43fe-b0fd-40cb883226e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ecfp_calc = ECFPCalc(ECFPID.ECFP4)\n",
+    "\n",
+    "def descriptor_calc(mol):\n",
+    "    return ecfp_calc(mol)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7d3e1b13-588f-4e6b-8ee1-3d34446a01ad",
    "metadata": {},
    "outputs": [],
@@ -463,7 +461,7 @@
     "    data = data.assign(Classification=data.Classification.astype(int))\n",
     "    data = data.dropna(subset=[\"ROMol\"])\n",
     "\n",
-    "    data = data.assign(Descriptors=data.ROMol.map(rdkit_ecfp))\n",
+    "    data = data.assign(Descriptors=data.ROMol.map(descriptor_calc))\n",
     "\n",
     "    return np.stack(data.Descriptors), np.stack(data.Classification)"
    ]
