Simplify standardization and stop using Dask for parallelizing it

--- a/Train-Again.ipynb
+++ b/Train-Again.ipynb
@@ -404,7 +404,6 @@
    "outputs": [],
    "source": [
     "from rdkit.Chem.PandasTools import LoadSDF\n",
-    "import dask.bag as db\n",
     "import numpy as np\n",
     "from molvs import Standardizer, MolVSError\n",
     "from lib.descriptors.cdk import ECFPCalc, ECFPID\n",
@@ -423,7 +422,10 @@
     "\n",
     "def standardize(mol):\n",
     "    try:\n",
-    "        return standardizer.super_parent(mol)\n",
+    "        mol = standardizer.fragment_parent(mol)\n",
+    "        mol = standardizer.charge_parent(mol)\n",
+    "        mol = standardizer.stereo_parent(mol)\n",
+    "        return mol\n",
     "    except MolVSError:\n",
     "        return None"
    ]
@@ -455,9 +457,7 @@
     "\n",
     "    # Dask dataframe should be the better choice, but it seems to have some problems\n",
     "    # with converting object types to string.\n",
-    "    data = data.assign(\n",
-    "        ROMol=db.from_sequence(data.ROMol, partition_size=1).map(standardize).compute()\n",
-    "    )\n",
+    "    data = data.assign(ROMol=data.ROMol.map(standardize))\n",
     "    data = data.assign(Classification=data.Classification.astype(int))\n",
     "    data = data.dropna(subset=[\"ROMol\"])\n",
     "\n",
