--- a/Train-Again.ipynb
+++ b/Train-Again.ipynb
@@ -589,13 +589,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "438db3c4-1292-451a-80df-6700210c56c9",
+   "metadata": {},
+   "source": [
+    "### Write out models"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20249e26-3674-4d8b-af0c-1eb0b442535e",
+   "id": "b253ca3a-96b8-4b8d-896a-56289cd910aa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = [job.result() for _, job in jobs.items() if job.done()]"
+    "from pathlib import Path\n",
+    "import pandas as pd\n",
+    "import joblib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d2f308a-1322-4f9f-9da3-fc677448923e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_dir = Path(\"models\")\n",
+    "model_dir.mkdir(exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d469c1a3-d09f-498f-8d8a-648bffb24c27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for name, (model, cv) in ((name, job.result()) for name, job in jobs.items() if job.done()):\n",
+    "    joblib.dump(model, model_dir.joinpath(f\"{name}.pkl\"))\n",
+    "    pd.DataFrame(cv).to_csv(model_dir.joinpath(f\"{name}.csv\"), index=False)"
    ]
   }
  ],
