Various automated fixes

--- a/Train-Again.ipynb
+++ b/Train-Again.ipynb
@@ -188,8 +188,7 @@
    "outputs": [],
    "source": [
     "from sklearn.decomposition import PCA\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.preprocessing import FunctionTransformer"
+    "from sklearn.linear_model import LogisticRegression"
    ]
   },
   {
@@ -404,7 +403,6 @@
    "outputs": [],
    "source": [
     "from rdkit.Chem.PandasTools import LoadSDF\n",
-    "import numpy as np\n",
     "from molvs import Standardizer, MolVSError\n",
     "from lib.descriptors.cdk import ECFPCalc, ECFPID\n",
     "import joblib"
@@ -438,6 +436,7 @@
    "outputs": [],
    "source": [
     "ecfp_calc = ECFPCalc(ECFPID.ECFP4)\n",
+    "\n",
     "\n",
     "def descriptor_calc(mol):\n",
     "    return ecfp_calc(mol)"
@@ -502,8 +501,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dask_jobqueue import SLURMCluster\n",
     "from dask.distributed import Client\n",
+    "from dask_jobqueue import SLURMCluster\n",
     "import atexit\n",
     "import shutil"
    ]
@@ -515,7 +514,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if \"cluster\" in globals():\n",
+    "if cluster := globals().get(\"cluster\"):\n",
     "    cluster.close()\n",
     "shutil.rmtree(\"logs\", ignore_errors=True)\n",
     "\n",
@@ -604,8 +603,7 @@
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "import pandas as pd\n",
-    "import joblib"
+    "import pandas as pd"
    ]
   },
   {
@@ -626,7 +624,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for name, (model, cv) in ((name, job.result()) for name, job in jobs.items() if job.done()):\n",
+    "for name, (model, cv) in (\n",
+    "    (name, job.result()) for name, job in jobs.items() if job.done()\n",
+    "):\n",
     "    joblib.dump(model, model_dir.joinpath(f\"{name}.pkl\"))\n",
     "    pd.DataFrame(cv).to_csv(model_dir.joinpath(f\"{name}.csv\"), index=False)"
    ]
