Commit some inexplicable metadata and id changes

--- a/Train-Again.ipynb
+++ b/Train-Again.ipynb
@@ -501,7 +501,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c6861ae8-1991-491f-b284-831807f42125",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "if cluster := globals().get(\"cluster\"):\n",
@@ -523,8 +525,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16a14628-8042-45b5-9376-fbf94fae1dff",
-   "metadata": {},
+   "id": "005ccf53-0bab-44fd-9116-dae08348ba0d",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "cluster.scale(len(models) * len(targets))"
