More automated changes (isort)

--- a/Train-Again.ipynb
+++ b/Train-Again.ipynb
@@ -128,8 +128,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.metrics import make_scorer, precision_score, recall_score\n",
     "from sklearn.model_selection import cross_validate\n",
-    "from sklearn.metrics import make_scorer, recall_score, precision_score\n",
     "\n",
     "\n",
     "def cross_validation(model, X, y):\n",
@@ -392,10 +392,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import joblib\n",
+    "from molvs import MolVSError, Standardizer\n",
     "from rdkit.Chem.PandasTools import LoadSDF\n",
-    "from molvs import Standardizer, MolVSError\n",
-    "from lib.descriptors.cdk import ECFPCalc, ECFPID\n",
-    "import joblib"
+    "\n",
+    "from lib.descriptors.cdk import ECFPID, ECFPCalc"
    ]
   },
   {
@@ -491,10 +492,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dask.distributed import Client\n",
-    "from dask_jobqueue import SLURMCluster\n",
     "import atexit\n",
-    "import shutil"
+    "import shutil\n",
+    "\n",
+    "from dask.distributed import Client\n",
+    "from dask_jobqueue import SLURMCluster"
    ]
   },
   {
@@ -597,6 +599,7 @@
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
+    "\n",
     "import pandas as pd"
    ]
   },
