Print number of saved models

--- a/Train-Again.ipynb
+++ b/Train-Again.ipynb
@@ -621,11 +621,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for name, (model, cv) in (\n",
-    "    (name, job.result()) for name, job in jobs.items() if job.done()\n",
-    "):\n",
+    "results = [(name, job.result()) for name, job in jobs.items() if job.done()]\n",
+    "\n",
+    "for name, (model, cv) in results:\n",
     "    joblib.dump(model, model_dir.joinpath(f\"{name}.pkl\"))\n",
-    "    pd.DataFrame(cv).to_csv(model_dir.joinpath(f\"{name}.csv\"), index=False)"
+    "    pd.DataFrame(cv).to_csv(model_dir.joinpath(f\"{name}.csv\"), index=False)\n",
+    "\n",
+    "jobs_count, done_count = len(jobs), len([job for job in jobs.values() if job.done()])\n",
+    "\n",
+    "print(f\"Saved {len(results)}/{len(jobs)} models\")"
    ]
   }
  ],
