Improve model saving code

--- a/Train-Again.ipynb
+++ b/Train-Again.ipynb
@@ -610,8 +610,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_dir = Path(\"models\")\n",
-    "model_dir.mkdir(exist_ok=True)"
+    "model_dir = Path(\"models\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "081d9372-d0dc-4c01-8393-1ef96160aaa5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def name_to_path(name):\n",
+    "    target, *maybe_substrate, architecture = name.split(\"-\")\n",
+    "\n",
+    "    if maybe_substrate == [\"S\"]:\n",
+    "        return Path(f\"Substrate/{target}/{architecture}_clf\")\n",
+    "    else:\n",
+    "        return Path(f\"Inhibition/{target}/{architecture}_clf\")"
    ]
   },
   {
@@ -624,8 +639,11 @@
     "results = [(name, job.result()) for name, job in jobs.items() if job.done()]\n",
     "\n",
     "for name, (model, cv) in results:\n",
-    "    joblib.dump(model, model_dir.joinpath(f\"{name}.pkl\"))\n",
-    "    pd.DataFrame(cv).to_csv(model_dir.joinpath(f\"{name}.csv\"), index=False)\n",
+    "    path = name_to_path(name)\n",
+    "    model_dir.joinpath(path).parent.mkdir(exist_ok=True, parents=True)\n",
+    "\n",
+    "    joblib.dump(model, model_dir.joinpath(f\"{path}.pkl\"))\n",
+    "    pd.DataFrame(cv).to_csv(model_dir.joinpath(f\"{path}.csv\"), index=False)\n",
     "\n",
     "jobs_count, done_count = len(jobs), len([job for job in jobs.values() if job.done()])\n",
     "\n",
