Convert descriptors to float64

--- a/Train-Again.ipynb
+++ b/Train-Again.ipynb
@@ -452,6 +452,7 @@
     "    data = data.dropna(subset=[\"ROMol\"])\n",
     "\n",
     "    data = data.assign(Descriptors=data.ROMol.map(descriptor_calc))\n",
+    "    data = data.assign(Descriptors=data.Descriptors.astype(np.float64))\n",
     "\n",
     "    return np.stack(data.Descriptors), np.stack(data.Classification)"
    ]
