Commit all training code changes before splitting out

--- a/Train-Again.ipynb
+++ b/Train-Again.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearnex import patch_sklearn"
+    "# from sklearnex import patch_sklearn"
    ]
   },
   {
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "patch_sklearn()"
+    "# patch_sklearn()"
    ]
   },
   {
@@ -89,16 +89,71 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d8e09c1c-696a-4c90-8475-2c5fb04969e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import FunctionTransformer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dea12a26-98a6-4565-8b03-372f3d44aa62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from molvs import Standardizer\n",
+    "from common.lib.descriptors.cdk import ECFPID, ECFPTransformer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e251c23d-6f09-4ed7-844f-a97c2a424dd3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from common.lib.sklearn import V"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bdaa528a-0cbc-4d57-a3a3-7e50848b25ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preprocessing_pipeline = Pipeline(\n",
+    "    steps=[\n",
+    "        (\"standardizer\", FunctionTransformer(V(Standardizer().fragment_parent))),\n",
+    "        (\"descriptors\", ECFPTransformer(ECFPID.ECFP4)),\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ded6c1e-8f98-43cf-9a8e-2c7704abf17a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import KFold, RandomizedSearchCV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "48d0b9ef-8bd8-419a-b07c-a9de9f934d54",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import KFold, RandomizedSearchCV\n",
-    "\n",
-    "\n",
-    "def make_parameter_search(model, cv_params):\n",
+    "def make_parameter_search(pipeline, cv_params):\n",
     "    return RandomizedSearchCV(\n",
-    "        model,\n",
+    "        # Pipeline(steps=preprocessing_pipeline.steps + pipeline.steps, memory=\"logs/cache\"),\n",
+    "        pipeline,\n",
     "        cv_params,\n",
     "        scoring=\"balanced_accuracy\",\n",
     "        refit=True,\n",
@@ -124,14 +179,57 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0a608b08-28e0-44b4-9cae-9ce736bdb50b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import get_scorer, make_scorer, precision_score, recall_score\n",
+    "from sklearn.model_selection import cross_validate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76a7b569-125f-41f7-97c5-c29bf466f054",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def score(model, X, y, scoring={}):\n",
+    "    return pd.DataFrame({key: [get_scorer(definition)(model, X, y)] for key, definition in scoring.items()})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a851a464-d2bd-4a24-a99d-e2b1dd200a9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def external_validation(model, X, y):\n",
+    "    return score(\n",
+    "        model,\n",
+    "        X,\n",
+    "        y,\n",
+    "        scoring={\n",
+    "            \"accuracy\": \"accuracy\",\n",
+    "            \"sensitivity\": \"recall\",\n",
+    "            \"specificity\": make_scorer(recall_score, pos_label=0),\n",
+    "            \"balanced_accuracy\": \"balanced_accuracy\",\n",
+    "            \"f1\": \"f1\",\n",
+    "            \"roc_auc\": \"roc_auc\",\n",
+    "            \"precision\": make_scorer(precision_score, zero_division=0),\n",
+    "            \"matthews_corrcoef\": \"matthews_corrcoef\",\n",
+    "        },\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "bcf39c3d-3887-41e1-b85f-0a245d0a54e8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import make_scorer, precision_score, recall_score\n",
-    "from sklearn.model_selection import cross_validate\n",
-    "\n",
-    "\n",
     "def cross_validation(model, X, y):\n",
     "    return cross_validate(\n",
     "        model,\n",
@@ -158,16 +256,6 @@
    "metadata": {},
    "source": [
     "## Define Models"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0ded6c1e-8f98-43cf-9a8e-2c7704abf17a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.pipeline import Pipeline"
    ]
   },
   {
@@ -284,6 +372,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.kernel_approximation import Nystroem\n",
     "from sklearn.svm import SVC"
    ]
   },
@@ -298,14 +387,14 @@
     "    Pipeline(\n",
     "        steps=[\n",
     "            (\"scaler\", None),\n",
-    "            (\"svc\", SVC(class_weight=\"balanced\", probability=True, random_state=rng())),\n",
+    "            (\"nystroem\", Nystroem()),\n",
+    "            (\"svc\", SVC(class_weight=\"balanced\", random_state=rng(), probability=True)),\n",
     "        ]\n",
     "    ),\n",
     "    {\n",
     "        \"scaler\": param_scalers,\n",
-    "        \"svc__kernel\": [\"rbf\"],\n",
+    "        \"nystroem__gamma\": [0.0001, 0.001, 0.01, 0.1, 1.0, 10.0],\n",
     "        \"svc__C\": [0.1, 1.0, 10.0, 100.0, 1000.0],\n",
-    "        \"svc__gamma\": [0.0001, 0.001, 0.01, 0.1, 1.0, 10.0],\n",
     "    },\n",
     ")"
    ]
@@ -392,45 +481,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "import joblib\n",
-    "from molvs import MolVSError, Standardizer\n",
-    "from rdkit.Chem.PandasTools import LoadSDF\n",
-    "\n",
-    "from lib.descriptors.cdk import ECFPID, ECFPCalc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2c1a2031-5381-448d-8beb-6366efc665dd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "standardizer = Standardizer()\n",
-    "\n",
-    "\n",
-    "def standardize(mol):\n",
-    "    try:\n",
-    "        mol = standardizer.fragment_parent(mol)\n",
-    "        mol = standardizer.charge_parent(mol)\n",
-    "        mol = standardizer.stereo_parent(mol)\n",
-    "        return mol\n",
-    "    except MolVSError:\n",
-    "        return None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c7d7efdc-f0c2-43fe-b0fd-40cb883226e4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ecfp_calc = ECFPCalc(ECFPID.ECFP4)\n",
-    "\n",
-    "\n",
-    "def descriptor_calc(mol):\n",
-    "    return ecfp_calc(mol)"
+    "from rdkit.Chem.PandasTools import LoadSDF"
    ]
   },
   {
@@ -445,16 +498,30 @@
     "        f\"ba_assets/data_for_models/data_threshold_all_filled_0.5_all_masters/training_chembl+manual/{target}.sdf\"\n",
     "    )\n",
     "\n",
-    "    # Dask dataframe should be the better choice, but it seems to have some problems\n",
-    "    # with converting object types to string.\n",
-    "    data = data.assign(ROMol=data.ROMol.map(standardize))\n",
-    "    data = data.assign(Classification=data.Classification.astype(int))\n",
-    "    data = data.dropna(subset=[\"ROMol\"])\n",
+    "    return np.stack(preprocessing_pipeline.transform(data.ROMol)), np.stack(\n",
+    "        data.Classification.astype(int)\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "efe15339-84fb-4848-bf19-8eb21dc81321",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_test(target):\n",
+    "    chembl = LoadSDF(\n",
+    "        f\"ba_assets/data_for_models/data_threshold_all_filled_0.5_all_masters/testing_chembl/{target}.sdf\"\n",
+    "    )\n",
+    "    manual = LoadSDF(\n",
+    "        f\"ba_assets/data_for_models/data_threshold_all_filled_0.5_all_masters/testing_manual/{target}.sdf\"\n",
+    "    )\n",
+    "    data = pd.concat([chembl, manual])\n",
     "\n",
-    "    data = data.assign(Descriptors=data.ROMol.map(descriptor_calc))\n",
-    "    data = data.assign(Descriptors=data.Descriptors.astype(np.float64))\n",
-    "\n",
-    "    return np.stack(data.Descriptors), np.stack(data.Classification)"
+    "    return np.stack(preprocessing_pipeline.transform(data.ROMol)), np.stack(\n",
+    "        data.Classification.astype(int)\n",
+    "    )"
    ]
   },
   {
@@ -464,18 +531,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_model(model, data):\n",
-    "    # Destructure training data\n",
-    "    X, y = data\n",
+    "def train_model(model, training, test):\n",
+    "    # Destructure data\n",
+    "    X, y = training\n",
+    "    X_test, y_test = test\n",
     "\n",
     "    # Train\n",
     "    with joblib.parallel_config(\"loky\", n_jobs=-1):\n",
     "        model.fit(X, y)\n",
     "\n",
     "    # Cross validate\n",
-    "    cross = cross_validation(model, X, y)\n",
+    "    cv = cross_validation(model, X, y)\n",
     "\n",
-    "    return model, cross"
+    "    # Validate on external data\n",
+    "    external = external_validation(model, X_test, y_test)\n",
+    "\n",
+    "    return model, cv, external"
    ]
   },
   {
@@ -515,11 +586,10 @@
     "\n",
     "cluster = SLURMCluster(\n",
     "    cores=1,\n",
-    "    job_cpu=16,\n",
-    "    memory=\"128 GB\",\n",
-    "    scheduler_options={\"host\": \"0.0.0.0\", \"dashboard_address\": \":8787\"},\n",
+    "    job_cpu=32,\n",
+    "    memory=\"8 GB\",\n",
+    "    scheduler_options={\"interface\": \"ens9f0\", \"dashboard_address\": \":8787\"},\n",
     "    log_directory=\"logs\",\n",
-    "    # worker_extra_args=[\"--resources\", \"singleton=1\"],\n",
     ")\n",
     "\n",
     "atexit.register(lambda: cluster.close())"
@@ -558,11 +628,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f325925-50e5-4350-b538-1fb4e21d6352",
+   "id": "0ec76700-7aaf-419a-8e54-cf17fc867854",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = {name: client.submit(load_data, name) for name in targets}"
+    "data_training = {target: client.submit(load_data, target, priority=1) for target in targets}\n",
+    "data_test = {target: client.submit(load_test, target, priority=1) for target in targets}"
    ]
   },
   {
@@ -573,15 +644,26 @@
    "outputs": [],
    "source": [
     "jobs = {\n",
-    "    f\"{target_name}-{parameter_search_name(model)}\": client.submit(\n",
+    "    (model_name, target_name): client.submit(\n",
     "        train_model,\n",
     "        model,\n",
-    "        target_data,\n",
-    "        # resources={\"singleton\": 1},\n",
+    "        data_training[target_name],\n",
+    "        data_test[target_name],\n",
+    "        key=f\"train_model_{model_name}-{target_name}\",\n",
     "    )\n",
-    "    for model in models\n",
-    "    for (target_name, target_data) in data.items()\n",
+    "    for model_name, model in ((parameter_search_name(model), model) for model in models)\n",
+    "    for target_name in targets\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b29acd2-bccb-4ab0-bc57-41a138e92369",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# [job.result() for job in jobs.values() if job.done()]"
    ]
   },
   {
@@ -633,22 +715,43 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6f976877-5cfd-46fd-a70a-c19f7171fa56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = [(name, job.result()) for name, job in jobs.items() if job.done()]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d469c1a3-d09f-498f-8d8a-648bffb24c27",
    "metadata": {},
    "outputs": [],
    "source": [
     "results = [(name, job.result()) for name, job in jobs.items() if job.done()]\n",
     "\n",
-    "for name, (model, cv) in results:\n",
+    "for name, (model, cv, external) in results:\n",
     "    path = name_to_path(name)\n",
     "    model_dir.joinpath(path).parent.mkdir(exist_ok=True, parents=True)\n",
     "\n",
     "    joblib.dump(model, model_dir.joinpath(f\"{path}.pkl\"))\n",
     "    pd.DataFrame(cv).to_csv(model_dir.joinpath(f\"{path}.csv\"), index=False)\n",
+    "    pd.DataFrame(external).to_csv(model_dir.joinpath(f\"{path}.external.csv\"), index=False)\n",
     "\n",
     "jobs_count, done_count = len(jobs), len([job for job in jobs.values() if job.done()])\n",
     "\n",
     "print(f\"Saved {len(results)}/{len(jobs)} models\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86be2bbe-5d22-4d09-96b2-21403234a11c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[job.result() for name, job in jobs.items() if job.done() and name.endswith(\"float64\")]"
    ]
   }
  ],
